fixed palette info not showing

--- a/react-portfolio-project/src/App.css
+++ b/react-portfolio-project/src/App.css
@@ -283,7 +283,7 @@ a:hover {
   margin: 30px;
   border: solid #ccc 3px;
   border-radius: 15px;
-  /* Creates Spiraling Effect */
+  /* Creates Striped Lines */
   background-size: 30px 30px;
   transition: opacity 0.3s ease;
   background-image: linear-gradient(45deg, #ccc, 25%, transparent 25%, transparent 50%, #ccc, 50%, #ccc, 75%, transparent 75%, transparent);
@@ -444,8 +444,7 @@ a:hover {
   display: flex;
   justify-content: center;
   width: 100%;
-  opacity: 1;
-  /* Creates Spiraling Effect */
+  /* Creates Striped Lines */
   background-size: 30px 30px;
   transition: opacity 0.3s ease;
   background-image: linear-gradient(45deg, #ccc, 25%, transparent 25%, transparent 50%, #ccc, 50%, #ccc, 75%, transparent 75%, transparent);
@@ -455,6 +454,7 @@ a:hover {
   border-radius: 100px;
 }
 
+ /* Creates Spiraling Effect */
 @keyframes barberpole {
   from {
     background-position: 0 0;
